Chat forms for client and Artist choose city, dinamic map

--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -2795,3 +2795,11 @@ a.disabled {
 {
     display: none;
 }
+.eventArtist
+{
+    margin-left: 3px;
+}
+.quotationDetailsChat
+{
+    padding: 0 15px;
+}
