--- a/web/css/style-retina.css
+++ b/web/css/style-retina.css
@@ -10609,3 +10609,11 @@ a.disabled {
 {
     display: none;
 }
+.eventArtist
+{
+    margin-left: 3px;
+}
+.quotationDetailsChat
+{
+    padding: 0 15px;
+}
