--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2593,3 +2593,11 @@ a.disabled {
 {
     display: none;
 }
+.eventArtist
+{
+    margin-left: 3px;
+}
+.quotationDetailsChat
+{
+    padding: 0 15px;
+}
