--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -10602,3 +10602,11 @@ a.disabled {
 {
     display: none;
 }
+.eventArtist
+{
+    margin-left: 3px;
+}
+.quotationDetailsChat
+{
+    padding: 0 15px;
+}
