--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -7,7 +7,7 @@
 
         <div class="enquiries-wrap">
             {% for chat in chats|reverse %}
-
+{{ dump(chat) }}
                 {% if chat.last_message %}
             <article class="enq-block clearfix" id="{{ chat.offer.id }}">
                 <span class="received-time">
@@ -29,9 +29,10 @@
                 <div class="col-lg-9 act-request">
 
                     <p class="act-request-title">
-                        Act request: <span class="bold-title">{% for chatOffer in chat.offer.performances %}
+                        Act request: <span class="bold-title">
+                            {% for chatOffer in chat.offer.performances %}
                                 {{ chatOffer.title }},
-                        {% endfor %}
+                            {% endfor %}
                         </span>
                         <!--<span class="see-more">(<a href="#">See more</a>)</span>-->
                     </p>
