--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -1,10 +1,18 @@
 
 {% if is_granted('EDIT', artist) %}
+    {% if artist.user.background != '/' %}
     <div class="header-background" style="background-image: url({{ asset(artist.user.background)|imagine_filter('background') }})">
-        <span id="bgImageSrc" class="hidden">{{ asset(artist.user.background)|imagine_filter('background') }} }}</span>
+        <span id="bgImageSrc" class="hidden">{{ asset(artist.user.background)|imagine_filter('background') }}</span>
         <div class="background-stripe"></div>
         <div id="editBackground"><a href="#" data-toggle="modal" data-target="#changeBgModal"><i class="fa fa-pencil-square-o"></i></a></div>
     </div>
+    {% else %}
+        <div class="header-background" style="background-image: url({{ asset(artist.user.background) }})">
+            <span id="bgImageSrc" class="hidden">{{ asset(artist.user.background) }}</span>
+            <div class="background-stripe"></div>
+            <div id="editBackground"><a href="#" data-toggle="modal" data-target="#changeBgModal"><i class="fa fa-pencil-square-o"></i></a></div>
+        </div>
+    {% endif %}
 {% else %}
     <div class="header-background" style="background-image: url({{ artist.user.background }})">
         <div class="background-stripe"></div>
