add page for edit profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
@@ -2,11 +2,11 @@
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
 
 <main>
-{% include 'ActedLegalDocsBundle:Profile:userSectionEdit.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:userSection.html.twig' %}
 
 <div class="container no-pad">
     <section class="price-list">
-{% include 'ActedLegalDocsBundle:Profile:ordersSectionEdit.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:ordersSection.html.twig' %}
     </section>
 {% include 'ActedLegalDocsBundle:Profile:biographySection.html.twig' %}
 
@@ -20,13 +20,35 @@
                     Feedbacks
                     {% endif %}
                 </span>
+
+            <div class="stars">
+                <div class="star">
+                    <div style="" class="fill-star"></div>
+                </div>
+
+                <div class="star">
+                    <div style="" class="fill-star"></div>
+                </div>
+
+                <div class="star">
+                    <div style="" class="fill-star"></div>
+                </div>
+
+                <div class="star">
+                    <div style="" class="fill-star"></div>
+                </div>
+
+                <div class="star">
+                    <div style="" class="fill-star"></div>
+                </div>
+            </div>
         </div>
         <div class="feedbacksContainer">
 {% include 'ActedLegalDocsBundle:Profile:feedbacksSection.html.twig' %}
         </div>
     </section>
 
-{% include 'ActedLegalDocsBundle:Profile:mediaSectionEdit.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:mediaSection.html.twig' %}
 
 {% include 'ActedLegalDocsBundle:Profile:feedsSection.html.twig' %}
 
