--- a/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/retinaCss/style-retina.css
@@ -453,7 +453,7 @@ section.used-by {
 .profile-info .controls .button-gradient .btn{min-width: 131px;}
 .profile-info .controls .button-gradient:not(.filled) .btn{padding-top: 4px;}
 
-.profile-info div.avatar {
+.profile-info .avatar {
     position: relative;
     width: 160px;
     height: 160px;
@@ -466,7 +466,7 @@ section.used-by {
     overflow: hidden;
 }
 
-.profile-info div.avatar img{
+.profile-info .avatar img{
     display: block;
     height: auto;
     width: 100%;
@@ -1291,7 +1291,7 @@ section.used-by {
     position: relative;
     float: left;
     display: inline-block;
-    width: calc(100% - 100px);
+    width: calc(100% - 75px);
     font-size: 15px;
     color: #636363;
     padding-bottom: 23px;
@@ -2207,7 +2207,7 @@ section.used-by {
         display: none;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 128px;
         height: 128px;
     }
@@ -2422,7 +2422,7 @@ section.used-by {
         margin-top: -83px;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 98px;
         height: 98px;
     }
@@ -2652,7 +2652,7 @@ section.used-by {
         margin: 0 auto 11px!important;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 53px;
         height: 53px;
         top: 38px;
@@ -2733,7 +2733,7 @@ section.used-by {
     .profile-info .avatar{
         overflow: visible;
     }
-    .profile-info div.avatar img{
+    .profile-info .avatar img{
         border-radius: 50%;
         -webkit-border-radius: 50%;
     }
@@ -2879,12 +2879,9 @@ only screen and (min-resolution: 2dppx) {
 }
 #editAvatar
 {
-    /*position: relative;
-    font-size: 28px;*/
-}
-#editAvatar a
-{
-    color: #fff;
+    position: relative;
+    color: #000;
+    font-size: 28px;
 }
 .info #username
 {
@@ -2901,16 +2898,12 @@ only screen and (min-resolution: 2dppx) {
 {
     text-align: center;
 }
-/*#editBackground
+#editBackground
 {
     font-size: 35px;
     right: 20px;
     position: absolute;
     top: 70px;
-}*/
-#editBackground a
-{
-    color:#fff;
 }
 #editBiography
 {
@@ -2919,7 +2912,9 @@ only screen and (min-resolution: 2dppx) {
 }
 #editCategories
 {
-    color:#fff;
+    position: absolute;
+    font-size: 20px;
+    right: 0;
 }
 .editOffer, .deleteOffer
 {
@@ -2938,7 +2933,7 @@ only screen and (min-resolution: 2dppx) {
 {
     width: 395px;
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     background: rgba(0,0,0,0.8);
     color: #fff;
     height: 273px;
@@ -3155,7 +3150,7 @@ a.disabled {
 {
     width: 100%;
 }
-/*.editingProf
+.editingProf
 {
     display: none;
     position: absolute;
@@ -3167,7 +3162,7 @@ a.disabled {
     padding: 0px 7px 0 10px;
     border-radius: 0 0 0 8px;
     cursor: pointer;
-}*/
+}
 .imagePerformanceChange {
     width: 100%;
     height: 100%;
@@ -3249,12 +3244,7 @@ a.disabled {
     width: 100px;
     height: 100px;
 }
-.price-list .video iframe {
-    z-index: 1;
-    position: relative;
-    height: 297px;
-}
-.price-list .controls.add
+.bx-loading
 {
-    position: relative;
+    display: none;
 }
