--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -3325,7 +3325,7 @@ header.small .navbar {
     position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
+            transform: translateX(-50%);
     width: 80%;
     max-width: 280px;
 }
@@ -3340,7 +3340,7 @@ header.small .navbar {
 .registration-modal .modal-body .controls.category-controls {
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 
 .registration-modal .modal-body {
@@ -3377,7 +3377,8 @@ header.small .navbar {
 }
 
 .registration-modal .category-item input {
-    display: none;
+    opacity: 0;
+    position: absolute;
 }
 
 .registration-modal .category-item label:hover {
@@ -3502,7 +3503,7 @@ header.small .navbar {
     width: 50%;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
+            transform: translateX(-50%);
 }
 
 .contact-details .form-group {
@@ -3635,7 +3636,7 @@ header.small .navbar {
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     font-family: LatoBlack;
     font-size: 26px;
     color: white;
@@ -3645,7 +3646,7 @@ header.small .navbar {
     position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
+            transform: translateX(-50%);
     margin-bottom: 32px;
 }
 
@@ -3723,122 +3724,6 @@ header.small .navbar {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-/*tab list styles start*/
-.registration-modal .tab-list{
-    list-style: none;
-    margin: 0;
-    padding: 10px 5px;
-    overflow: hidden;
-    text-align: center;
-    display: inline-block;
-    vertical-align: top;
-    border-bottom: 2px solid rgba(202, 202, 202, 0.25);
-}
-
-.registration-modal .tab-list li{
-    background: transparent;
-    float: left;
-    height: 159px;
-    width: 33.33%;
-    position: relative;
-}
-
-.registration-modal .tab-list li:after{
-    content: "";
-    opacity: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    background: rgb(255, 157, 92);
-    background-image: -webkit-linear-gradient(left, rgba(255, 157, 92, 1) 0%, rgba(255, 129, 66, 1) 100%);
-    background-image: linear-gradient(to right, rgba(255, 157, 92, 1) 0%, rgba(255, 129, 66, 1) 100%);
-    -webkit-transition: opacity .25s;
-    transition: opacity .25s;
-}
-
-.registration-modal .tab-list li.active:after{
-    opacity: 1;
-}
-
-.registration-modal .tab-list li.active h3{
-    color: #fff;
-}
-
-.registration-modal .tab-list .img-box{
-    margin: 0 auto 7px;
-    width: 72px;
-    height: 72px;
-    overflow: hidden;
-}
-.registration-modal .tab-list .img-box img{
-    display: block;
-    height: auto;
-    width: 100%;
-}
-.registration-modal .tab-list  h3{
-    margin: 0;
-    font-size: 18px;
-    color: #222;
-}
-.registration-modal .tab-list a{
-    display: table;
-    height: 100%;
-    width: 100%;
-    text-decoration: none;
-    z-index: 2;
-    position: relative;
-}
-.registration-modal .tab-list a:hover{
-    text-decoration: none;
-}
-.registration-modal .tab-list figure{
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    overflow: hidden;
-}
-/*tab list styles end*/
-/*categories list styles start*/
-.registration-modal .categories-list{
-    overflow: hidden;
-    list-style: none;
-    margin: 0;
-    padding: 15px 0 7px;
-    color: #828282;
-    font-size: 14px;
-}
-.registration-modal .categories-list > li{
-    float: left;
-    padding: 0 5px;
-    width: 33.33%;
-}
-.registration-modal .categories-list ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-.registration-modal .categories-list ul li{
-    margin: 0 0 5px;
-    position: relative;
-}
-.registration-modal .categories-list input[type="checkbox"],
-.registration-modal .categories-list input[type="radio"]{
-    display: none;
-}
-.registration-modal .categories-list label{
-    margin: 0;
-    cursor: pointer;
-}
-.registration-modal .categories-list input[type="checkbox"]:checked + label,
-.registration-modal .categories-list input[type="radio"]:checked + label{
-    color: #8BA8FF;
-}
-/*categories list styles end*/
 
 @media (max-width: 767px) {
 
@@ -3888,63 +3773,11 @@ header.small .navbar {
     .registration-modal .modal-body .contact-details .controls {
         left: 50%;
         -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
-    }
-
-    .registration-modal .tab-list li{
-        height: 128px;
-    }
-
-    .registration-modal .tab-list .img-box{
-        height: 56px;
-        width: 52px;
-    }
-    .registration-modal .tab-list h3{
-        font-size: 16px;
-    }
-}
-
-
-@media (max-width: 675px){
-    .registration-modal .tab-list a{
-        padding: 18px;
-        display: block;
-    }
-    .registration-modal .tab-list figure{
-        display: block;
+                transform: translateX(-50%);
     }
 }
 
 @media (max-width: 500px) {
-
-    .registration-modal .tab-list li{
-        height: 80px;
-    }
-
-    .registration-modal .tab-list a{
-        padding: 3px 5px 5px;
-        display: table;
-    }
-
-    .registration-modal .tab-list figure{
-        display: table-cell;
-    }
-
-    .registration-modal .tab-list .img-box{
-        display: none;
-    }
-
-    .registration-modal .categories-list ul li{
-        margin-bottom: 2px;
-    }
-
-    .registration-modal .tab-list li h3{
-        font-size: 14px;
-    }
-    .registration-modal .categories-list{
-        padding-top: 5px;
-    }
-
 
     .gradient-light,
     .gradient-dark {
@@ -3970,7 +3803,7 @@ header.small .navbar {
         display: inline-block;
         left: 50%;
         -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+                transform: translateX(-50%);
         position: relative;
     }
 
@@ -4123,7 +3956,7 @@ header.small .navbar {
         position: relative;
         left: 50%;
         -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+                transform: translateX(-50%);
         margin-bottom: 20px;
         max-width: 125px;
     }
@@ -4155,7 +3988,7 @@ header.small .navbar {
         display: inline-block;
         left: 50%;
         -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+                transform: translateX(-50%);
         position: relative;
     }
 
@@ -4308,7 +4141,7 @@ header.small .navbar {
         position: relative;
         left: 50%;
         -webkit-transform: translateX(-50%);
-        transform: translateX(-50%);
+                transform: translateX(-50%);
         margin-bottom: 20px;
         max-width: 115px;
     }
@@ -5919,17 +5752,6 @@ header.small .navbar {
 .enquiries .categories-menu {
     margin-top: 16px;
     margin-bottom: 50px;
-    position: relative;
-}
-
-.enquiries .categories-menu:after{
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: -15px;
-    height: 1px;
-    background-color: #a5a5a5;
 }
 
 .enq-icon {
@@ -6078,65 +5900,6 @@ header.small .navbar {
     right: 0;
 }
 
-.enquiries .container {
-    padding: 0!important;
-}
-
-.enquiries-wrap {
-    padding: 0 15px;
-}
-
-/*booking styles start*/
-.bookings .categories-menu:after{
-    content: none;
-}
-.bookings .note{
-    font-family: LatoRegular;
-    font-size: 16px;
-    color: rgba(0, 0, 0, 0.68);
-    position: absolute;
-    right: 0;
-    font-style: normal;
-}
-.bookings .note.green b{color: #489442;}
-.bookings .note.blue b{color: #494fc7;}
-.bookings .note.orange b{color: #ff735a;}
-.act-request-list{
-    margin: 0;
-    font-size: 15px;
-    color: #000;
-    color: rgba(0, 0, 0, 0.68);
-}
-.act-request-list dt{
-    float: left;
-    margin: 0 5px 0 0;
-    font-weight: normal;
-    min-width: 68px;
-    max-width: 100px;
-}
-.act-request-list dd{
-    overflow: hidden;
-    margin: 0 0 8px;
-}
-.act-request-list ul{
-    list-style: none;
-    margin: 0;
-    padding: 0 160px 0 0;
-}
-.act-request-list ul li{
-    margin: 0 0 10px;
-}
-.act-request-list ul li:last-child{margin: 0;}
-.act-request-list .bold{
-    color: rgba(0, 0, 0, 1);
-    font-weight: normal;
-    font-family: LatoBold;
-}
-.bookings .act-request .controls{text-align: left;}
-.bookings .act-request .button-gradient{margin: 0 40px 0 0 !important;}
-.bookings .select2{margin: 0 0 30px;}
-/*booking styles end*/
-
 @media (max-width: 767px) {
     .act-request .controls .button-gradient:not(:last-of-type) {
         margin-bottom: 15px!important;
@@ -6153,7 +5916,6 @@ header.small .navbar {
 
     .act-request-title,
     .received-time,
-    .bookings .note,
     .act-request-message span.title,
     .act-request-data li span,
     .act-request-data li {
@@ -6171,25 +5933,6 @@ header.small .navbar {
     .act-request-message span.text {
         font-size: 14px;
     }
-
-    .bookings .act-request{padding: 0 0 85px;}
-    .bookings .act-request .controls{text-align: center;}
-    .bookings .act-request .controls .btn{min-width: 150px;}
-    .bookings .act-request .button-gradient{margin: 0 20px !important;}
-
-    .act-request-list{
-        font-size: 13px;
-    }
-
-    .act-request-list dt{
-        float: none;
-        max-width: 100%;
-        min-width: 100%;
-        margin: 0 0 6px;
-    }
-    .act-request-list ul{padding: 0;}
-    .act-request-list ul li{margin: 0 0 6px;}
-    .act-request-list dd{margin: 0 0 15px;}
 }
 .messages {
     padding-bottom: 100px;
@@ -8789,7 +8532,7 @@ section.used-by {
 .profile-info .controls .button-gradient .btn{min-width: 176px;}
 .profile-info .controls .button-gradient:not(.filled) .btn{padding-top: 4px;}
 
-.profile-info div.avatar {
+.profile-info .avatar {
     position: relative;
     width: 213px;
     height: 213px;
@@ -8801,7 +8544,7 @@ section.used-by {
     overflow: hidden;
 }
 
-.profile-info div.avatar img{
+.profile-info .avatar img{
     width: 100%;
     height: auto;
     display: block;
@@ -9593,7 +9336,7 @@ section.used-by {
     position: relative;
     float: left;
     display: inline-block;
-    width: calc(100% - 125px);
+    width: calc(100% - 100px);
     font-size: 20px;
     color: #636363;
     padding-bottom: 30px;
@@ -10418,7 +10161,7 @@ section.used-by {
         display: none;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 170px;
         height: 170px;
     }
@@ -10628,7 +10371,7 @@ section.used-by {
         margin-top: -110px;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 130px;
         height: 130px;
     }
@@ -10937,7 +10680,7 @@ section.used-by {
     margin: 0 auto 15px!important;
     }
 
-    .profile-info div.avatar {
+    .profile-info .avatar {
         width: 70px;
         height: 70px;
         top: 50px;
@@ -11007,10 +10750,10 @@ section.used-by {
         bottom: -35px!important;
     }
 
-    .profile-info div.avatar{
+    .profile-info .avatar{
         overflow: visible;
     }
-    .profile-info div.avatar img{
+    .profile-info .avatar img{
         border-radius: 50%;
         -webkit-border-radius: 50%;
     }
@@ -11023,13 +10766,9 @@ section.used-by {
 }
 #editAvatar
 {
-    /*position: relative;
+    position: relative;
     color: #000;
-    font-size: 28px;*/
-}
-#editAvatar a
-{
-    color: #fff;
+    font-size: 28px;
 }
 .info #username
 {
@@ -11046,16 +10785,12 @@ section.used-by {
 {
     text-align: center;
 }
-/*#editBackground
+#editBackground
 {
     font-size: 35px;
     right: 20px;
     position: absolute;
     top: 70px;
-}*/
-#editBackground a
-{
-    color:#fff;
 }
 #editBiography
 {
@@ -11064,7 +10799,9 @@ section.used-by {
 }
 #editCategories
 {
-    color: #fff;
+    position: absolute;
+    font-size: 20px;
+    right: 0;
 }
 .editOffer, .deleteOffer
 {
@@ -11083,7 +10820,7 @@ section.used-by {
 {
     width: 395px;
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     background: rgba(0,0,0,0.8);
     color: #fff;
     height: 273px;
@@ -11262,7 +10999,7 @@ a.disabled {
     width: 100%;
     height: 273px;
 }
-/*.editingProf
+.editingProf
 {
     display: none;
     position: absolute;
@@ -11274,7 +11011,7 @@ a.disabled {
     padding: 0px 7px 0 10px;
     border-radius: 0 0 0 8px;
     cursor: pointer;
-}*/
+}
 .imagePerformanceChange {
     width: 100%;
     height: 100%;
@@ -11356,13 +11093,7 @@ a.disabled {
     width: 100px;
     height: 100px;
 }
-.price-list .video iframe {
-    z-index: 1;
-    position: relative;
-    height: 297px;
-}
-
-.price-list .controls.add
+.bx-loading
 {
-    position: relative;
+    display: none;
 }
