--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -15,11 +15,10 @@
     {% elseif app.request.get('_route') == 'acted_legal_docs_search' %}
     <header class="search">
     {% elseif app.request.get('_route') == 'profile_show' or app.request.get('_route') == 'profile_edit' or app.request.get('_route') == 'profile_edit_page' %}
-    <header class="headerProfile">
+    <header>
     {% else %}
     <header class="small">
 {% endif %}
-
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
