--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -15,7 +15,7 @@
     {% elseif app.request.get('_route') == 'acted_legal_docs_search' %}
     <header class="search">
     {% elseif app.request.get('_route') == 'profile_show' or app.request.get('_route') == 'profile_edit' or app.request.get('_route') == 'profile_edit_page' %}
-    <header class="headerProfile">
+    <header>
     {% else %}
     <header class="small">
 {% endif %}
@@ -105,17 +105,16 @@
                     </li>
                         {% endif %}
 
-                        {% if app.user %}
-                        {% set amount = render(controller('ActedLegalDocsBundle:ChatRoom:countNewMessage')) %}
                     <li class="mail">
                         <!--For screens > 991px-->
-                        <div class="hidden-sm hidden-xs badge">{{ amount|default(0) }}</div>
+                        <div class="hidden-sm hidden-xs badge">4</div>
                         <a class="hidden-sm hidden-xs" href="/dashboard/messages/{{ app.user.id }}"><img src="{{ asset('assets/images/messages.png') }}" alt=""></a>
                         <!--For screens < 991px-->
-
+                        {% if app.user %}
+                            {% set amount = render(controller('ActedLegalDocsBundle:ChatRoom:countNewMessage')) %}
                             <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">{{ amount|default(0) }}</span></a>
                         {% else %}
-                            <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">{{ amount|default(0) }}</span></a>
+                            <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">0</span></a>
                         {% endif %}
                     </li>
                     <li class="profile-dropdown dropdown hidden-sm">
