fix header in profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -15,10 +15,11 @@
     {% elseif app.request.get('_route') == 'acted_legal_docs_search' %}
     <header class="search">
     {% elseif app.request.get('_route') == 'profile_show' or app.request.get('_route') == 'profile_edit' or app.request.get('_route') == 'profile_edit_page' %}
-    <header class="headerProfile">
+    <header>
     {% else %}
     <header class="small">
 {% endif %}
+
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -84,7 +85,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     {% if app.user %}
-                    <li class="bookings"><a href="/dashboard/bookings/{{ app.user.id }}">My bookings
+                    <li class="bookings"><a href="#">My bookings
                             <div class="underline">
                                 <div class="top"></div>
                                 <div class="bottom"></div>
@@ -93,29 +94,25 @@
                     </li>
 
 
-                    {% if app.user.artist %}
-                        <li class="profile">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                            Profile
-                            <div class="underline">
-                                <div class="top"></div>
-                                <div class="bottom"></div>
-                            </div>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/profile/{{ app.user.artist.slug }}">see my profile</a></li>
-                                <li><a href="/profile/edit_profile/{{ app.user.artist.slug }}">edit my profile</a></li>
-                            </ul>
-                        </li>
-                    {% endif %}
+                        {% if app.user.artist %}
+                    <li class="profile"><a href="/profile/{{ app.user.artist.slug }}">
+                        Profile
+                        <div class="underline">
+                            <div class="top"></div>
+                            <div class="bottom"></div>
+                        </div>
+                        </a>
+                    </li>
+                        {% endif %}
 
+                        {% if app.user %}
+                        {% set amount = render(controller('ActedLegalDocsBundle:ChatRoom:countNewMessage')) %}
                     <li class="mail">
                         <!--For screens > 991px-->
-                        {% set amount = render(controller('ActedLegalDocsBundle:ChatRoom:countNewMessage')) %}
                         <div class="hidden-sm hidden-xs badge">{{ amount|default(0) }}</div>
                         <a class="hidden-sm hidden-xs" href="/dashboard/messages/{{ app.user.id }}"><img src="{{ asset('assets/images/messages.png') }}" alt=""></a>
                         <!--For screens < 991px-->
-                        {% if app.user %}
+
                             <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">{{ amount|default(0) }}</span></a>
                         {% else %}
                             <a class="hidden-md hidden-lg" href="/dashboard/messages/{{ app.user.id }}">Messages<span class="badge">{{ amount|default(0) }}</span></a>
@@ -127,27 +124,15 @@
                             <img class="avatar" src="{{ app.user.avatar }}" alt="Avatar">
                             {{ app.user.firstname}} {{ app.user.lastname }} <span class="caret"></span>
                         </a>
-                        {% if app.user.artist %}
                         <ul class="dropdown-menu">
-                            <li><a href="#">My Dashboard</a></li>
-                            <li><a href="#">Settings</a></li>
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
                             <li role="separator" class="divider"></li>
                             {% if(app.user) %}
                                 <li><a id="logOut" href="{{ logout_path() }}">Logout</a></li>
                             {% endif %}
                         </ul>
-                        {% else %}
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
-                                <li role="separator" class="divider"></li>
-                                {% if(app.user) %}
-                                    <li><a id="logOut" href="{{ logout_path() }}">Logout</a></li>
-                                {% endif %}
-                            </ul>
-                        {% endif %}
-
                         <span id="userInformation" class="hidden">{{ app.user.id }}</span>
                     </li>
                     {% else %}
