fix header in profile

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -14,11 +14,12 @@
 <header class="home">
     {% elseif app.request.get('_route') == 'acted_legal_docs_search' %}
     <header class="search">
-    {% elseif app.request.get('_route') == 'profile_show' or app.request.get('_route') == 'profile_edit' %}
+    {% elseif app.request.get('_route') == 'profile_show' or app.request.get('_route') == 'profile_edit' or app.request.get('_route') == 'profile_edit_page' %}
     <header>
     {% else %}
     <header class="small">
 {% endif %}
+
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
