M5 quote validation fix

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -92,6 +92,7 @@
                                 <input id="count_4" name="number_of_guests" type="radio" value="500+">
                                 <label for="count_4">500+</label>
                             </div>
+                            <span class="errorCat"></span>
                         </div>
 
                     </div>
