--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/profile_edit.html.twig
@@ -2,7 +2,7 @@
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
 
 <main>
-{% include 'ActedLegalDocsBundle:Profile:userSection.html.twig' %}
+{% include 'ActedLegalDocsBundle:Profile:userSectionEdit.html.twig' %}
 
 <div class="container no-pad">
     <section class="price-list">
